tests/error/comptime/compare_pointers2.bz
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function bar() -> *int32
{
	let j = 0;
	return &j;
}

function test()
{
	(consteval {
		foo() > bar();
	});
}
